--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -18,7 +19,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body>
+  <body style="max-width:960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -41,6 +42,7 @@
       </div>
     </nav>
 
+    <div class="nothome">
     <div class="aboutwrapper">
       <div>
         <h2 class="title">Hello again!</h2>
@@ -82,6 +84,8 @@
         />
       </div>
     </div>
+    </div>
+
     <footer>
       <div>
         <a
