--- a/afford.html
+++ b/afford.html
@@ -19,7 +19,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body>
+  <body style="max-width:960px">
     <nav>
       <div class="navcontent">
         <div>
