--- a/aubergine.html
+++ b/aubergine.html
@@ -3,6 +3,7 @@
     <!-- Head includes files such as css and js, wont be seen -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
         <title>John Teo Portfolio</title>
          <!-- Title is the name you see on the tab/link -->
@@ -16,7 +17,7 @@
     </head>
 
     <!-- Body is the content that people see on the website -->
-    <body>
+    <body style="max-width:960px">
         <nav>
             <div class="navcontent">
                 <div>
@@ -32,6 +33,7 @@
                 </div>
             </div>
         </nav>
+        <div class= "nothome">
         <div class="projectheader">
             <h4>CASE STUDY - 2016</h4>
             <h1>Comfort in a Puff</h1>
@@ -113,6 +115,7 @@
                 <img class="imageflush" 
                 src="Images/aubergine-02.jpg"/>
          </div>
+        </div>
         </div>
          <footer>
             <div>
