--- a/dbs.html
+++ b/dbs.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -19,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body>
+  <body style="max-width:960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -41,7 +42,7 @@
         </div>
       </div>
     </nav>
-
+    <div class="nothome">
     <div class="projectheader">
       <h4>CASE STUDY - 2017</h4>
       <h1>Redesigning the ATM</h1>
@@ -190,6 +191,7 @@
           was taken from DBS Treasures.
         </p>
       </div>
+    </div>
     </div>
     <footer>
       <div>
