--- a/switch.html
+++ b/switch.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -19,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body>
+  <body style="max-width:960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -41,13 +42,13 @@
         </div>
       </div>
     </nav>
+    <div class="nothome">
     <div class="projectheader">
         <h4>CASE STUDY - 2019</h4>
         <h1>Upskilling Digital Proficiency</h1>
         <img class="progressive__img progressive--not-loaded"
         data-progressive="Images/switch-01.png"
         src="Images/switch-01-s.jpg"/>
-    </div>
     </div>
     <div class="projectinfo">
         <div class="mainbody-01">
@@ -177,6 +178,7 @@
                   with the option to dive deeper if they wanted to.</p>
             </div>
     </div>
+  </div>
     <footer>
       <div>
         <a
