--- a/doodles.html
+++ b/doodles.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -19,7 +20,7 @@
   </head>
 
   <!-- Body is the content that people see on the website -->
-  <body>
+  <body style="max-width:960px">
     <nav>
       <div class="navcontent">
         <div>
@@ -41,6 +42,8 @@
         </div>
       </div>
     </nav>
+    
+    <div class="nothome">
 
     <h2 class="title">I like playing with interaction ideas</h2>
 
@@ -101,6 +104,8 @@
         src="Images/gif-09-s.jpg" />
       </div>
     </div>
+    </div>
+
     <footer>
       <div>
         <a
