--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
     <!-- Head includes files such as css and js, wont be seen -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
         <title>John Teo Portfolio</title>
          <!-- Title is the name you see on the tab/link -->
          <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,7 +11,7 @@
     </head>
 
     <!-- Body is the content that people see on the website -->
-    <body>
+    <body style="max-width:960px">
         <nav>
             <div class="navcontent">
                 <div>
@@ -26,22 +27,24 @@
                 </div>
             </div>
         </nav>
+        <div class = "nothome">
         <div class="projectheader">
             <h4>CASE STUDY - 2020</h4>
-           <h1>The Future of Retail Banking</h1>
-           <img src="Images/forb-01.jpg"/>
+           <h1>Connected-homes in Asia Pacific</h1>
+           <img src="Images/connectedhome-00.jpg"/>
         </div>
         <div class="projectinfo">
             <div class="mainbody-01">
-                <p class="spacing">The financial landscape is changing drastically. New players are entering a market traditionally dominated by large, immovable monolithic financial industries. The move to digital is embraced by most. However the question remains, what role does the physical retail space have in the future?</p>
-                <p>Stay tuned to find out more!</p>
+                <p class="spacing">The living space is becoming a more integrated connected system with smart devices and media platforms with the market expected to double in the next 5 years. The client wanted consumer insights across 3 markets (Indonesia, India, Australia) to develop strategies for expanding use cases.</p>
+                <p>Facing additional challenges because of Covid-19, the team conducted remote ethnography through diary studies and remote interviews to understand key trends and pain points in connected homes, as well as home entertainment platforms. Stay tuned to find out more!</p>
             </div>
             <div class="projectstatus">
                 <p class="primarydetails">My Role</p>
-                <p class="secondarydetails">Research <br>Visualisation </p>
+                <p class="secondarydetails">Research</p>
                 <p class="primarydetails">Team</p>
                 <p class="secondarydetails">Fjord Singapore</p>
             </div>
+          </div>
         </div>
         <footer>
             <div>
