--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -42,57 +43,65 @@
       </div>
     </nav>
 
-    <h2 class="title">Hello. I'm John Teo, a designer.</h2>
+  <div class="titlecontainer">
+    <h1 class="title">I'm John, a product designer based in Singapore. ( ・・)つ旦~</h1>
+  </div>
 
-    <div class="mainbody-02">
-      <h4 class="subheader">
-        Currently a service and interaction designer at
-        <a href="https://www.fjordnet.com/">Fjord Singapore</a>. Here are some
-        of the works I've done.
-      </h4>
+    <div class="mainwork">
+      <a href="switch.html">
+      <div class="mainworkcontent">
+        <div class="mainworktext"> 
+          <span>Interaction design</span>
+          <h2>A learning platform to uplift digital maturity across an organisation</h2>
+          <h6>Read the case study ></h6>   
+        </div> 
+        <img src="Images/switch-00.png"/>
+      </div> 
+    </a>
     </div>
 
+    <div class="mainwork2">
+      <a href="pivot.html">
+      <div class="mainworkcontent">
+        <div class="mainworktext"> 
+          <span>Interaction design</span>
+          <h2>A descriptive analytics platform for employees to make informed decisions and coordinate actions</h2>
+            <h6>Read the case study ></h6>
+        </div>
+        <img src="Images/oilandgas-00.png"/>
+      </div> 
+    </a>
+    </div>
+
+    <div class="mainwork">
+      <a href="dbs.html">
+      <div class="mainworkcontent">
+        <div class="mainworktext">
+          <span>Interaction design</span>
+          <h2>Redesigning the ATM user interface for DBS</h2>
+            <h6>Read the case study ></h6>
+        </div>
+        <img src="Images/dbs-00.png"/>
+      </div> 
+    </a>
+    </div>
+
+
     <!-- Grid -->
+    <div class="titlecontainer">
+      <h2 class="title2">Other projects</h2>
     <div class="grid">
       <div class="column">
-        <a href="forb.html">
+        <a href="home.html">
           <div class="box">
             <img
               class="progressive__img progressive--not-loaded"
-              data-progressive="Images/coming.png"
-              src="Images/coming.png"
+              data-progressive="Images/connectedhome-00.jpg"
+              src="Images/connectedhome-00.jpg"
             />
           </div>
-          <h4>The Future of <br />Retail Banking</h4>
-          <h5>Fjord</h5>
-        </a>
-      </div>
-
-      <div class="column">
-        <a href="switch.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/switch-00.jpg"
-              src="Images/switch-00-s.jpg"
-            />
-          </div>
-          <h4>Upskilling Digital <br />Proficiency</h4>
-          <h5>Oil and Gas Company</h5>
-        </a>
-      </div>
-
-      <div class="column">
-        <a href="pivot.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/pivot-00.jpg"
-              src="Images/pivot-00-s.jpg"
-            />
-          </div>
-          <h4><br />Visualizing Data</h4>
-          <h5>Oil and Gas Company</h5>
+          <h6>Service design</h6>
+          <p>Redefining the connected-home experience in Asia-Pacific</p>
         </a>
       </div>
 
@@ -101,46 +110,12 @@
           <div class="box">
             <img
               class="progressive__img progressive--not-loaded"
-              data-progressive="Images/airline-00.jpg"
-              src="Images/airline-00-s.jpg"
+              data-progressive="Images/airline-00.png"
+              src="Images/airline-00.png"
             />
           </div>
-          <h4>
-            A Beacon for Better <br />
-            Customer Experience
-          </h4>
-          <h5>Airline</h5>
-        </a>
-      </div>
-
-      <div class="column">
-        <a href="dbs.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/dbs-00.jpg"
-              src="Images/dbs-00-s.jpg"
-            />
-          </div>
-          <h4><br />Redesigning the ATM</h4>
-          <h5>DBS</h5>
-        </a>
-      </div>
-
-      <div class="column">
-        <a href="afford.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/afford-00.jpg"
-              src="Images/afford-00-s.jpg"
-            />
-          </div>
-          <h4>
-            Financial Empowerment <br />
-            in a Cashless Society
-          </h4>
-          <h5>Afford</h5>
+          <h6>Service design</h6>
+          <p>A beacon for better customer experience for an airline</p>
         </a>
       </div>
 
@@ -149,15 +124,18 @@
           <div class="box">
             <img
               class="progressive__img progressive--not-loaded"
-              data-progressive="Images/aubergine-00.jpg"
-              src="Images/aubergine-00-s.jpg"
+              data-progressive="Images/aubergine-00.png"
+              src="Images/ubergine-00.png"
             />
           </div>
-          <h4><br />Comfort in a Puff</h4>
-          <h5>Studio Aubergine</h5>
+          <h6>Industrial design</h6>
+          <p>The aubergine pillow, finding comfort in a puff</p>
         </a>
       </div>
+
     </div>
+    </div>
+
     <footer>
       <div>
         <a
