fixed safari bug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>John Teo Portfolio</title>
     <!-- Title is the name you see on the tab/link -->
@@ -43,96 +43,101 @@
       </div>
     </nav>
 
-  <div class="titlecontainer">
-    <h1 class="title">I'm John, a product designer based in Singapore. ( ・・)つ旦~</h1>
-  </div>
+    <div class="titlecontainer">
+      <h1 class="title">
+        I'm John, a product designer based in Singapore. ( ・・)つ旦~
+      </h1>
+    </div>
 
     <div class="mainwork">
       <a href="switch.html">
-      <div class="mainworkcontent">
-        <div class="mainworktext"> 
-          <span>Interaction design</span>
-          <h2>A learning platform to uplift digital maturity across an organisation</h2>
-          <h6>Read the case study ></h6>   
-        </div> 
-        <img src="Images/switch-00.png"/>
-      </div> 
-    </a>
+        <div class="mainworkcontent">
+          <div class="mainworktext">
+            <span>Interaction design</span>
+            <h2>
+              A learning platform to uplift digital maturity across an
+              organisation
+            </h2>
+            <h6>Read the case study ></h6>
+          </div>
+          <img src="Images/switch-00.png" />
+        </div>
+      </a>
     </div>
     <div class="mainwork2">
       <a href="pivot.html">
-      <div class="mainworkcontent">
-        <div class="mainworktext"> 
-          <span>Interaction design</span>
-          <h2>A descriptive analytics platform for employees to make informed decisions and coordinate actions</h2>
+        <div class="mainworkcontent">
+          <div class="mainworktext">
+            <span>Interaction design</span>
+            <h2>
+              A descriptive analytics platform for employees to make informed
+              decisions and coordinate actions
+            </h2>
             <h6>Read the case study ></h6>
+          </div>
+          <img src="Images/oilandgas-00.png" />
         </div>
-        <img src="Images/oilandgas-00.png"/>
-      </div> 
-    </a>
+      </a>
     </div>
     <div class="mainwork">
       <a href="dbs.html">
-      <div class="mainworkcontent">
-        <div class="mainworktext">
-          <span>Interaction design</span>
-          <h2>Redesigning the ATM user interface for DBS</h2>
+        <div class="mainworkcontent">
+          <div class="mainworktext">
+            <span>Interaction design</span>
+            <h2>Redesigning the ATM user interface for DBS</h2>
             <h6>Read the case study ></h6>
+          </div>
+          <img src="Images/dbs-00.png" />
         </div>
-        <img src="Images/dbs-00.png"/>
-      </div> 
-    </a>
+      </a>
     </div>
-
-
 
     <!-- Grid -->
     <div class="titlecontainer">
       <h2 class="title2">Other projects</h2>
-    <div class="grid">
-      <div class="column">
-        <a href="home.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/connectedhome-00.jpg"
-              src="Images/connectedhome-00.jpg"
-            />
-          </div>
-          <h6>Service design</h6>
-          <p>Redefining the connected-home experience in Asia-Pacific</p>
-        </a>
-      </div>
+      <div class="grid">
+        <div class="column">
+          <a href="home.html">
+            <div class="box">
+              <img
+                class="progressive__img progressive--not-loaded"
+                data-progressive="Images/connectedhome-00.jpg"
+                src="Images/connectedhome-00.jpg"
+              />
+            </div>
+            <h6>Service design</h6>
+            <p>Redefining the connected-home experience in Asia-Pacific</p>
+          </a>
+        </div>
 
-      <div class="column">
-        <a href="airline.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/airline-00.png"
-              src="Images/airline-00.png"
-            />
-          </div>
-          <h6>Service design</h6>
-          <p>A beacon for better customer experience for an airline</p>
-        </a>
-      </div>
+        <div class="column">
+          <a href="airline.html">
+            <div class="box">
+              <img
+                class="progressive__img progressive--not-loaded"
+                data-progressive="Images/airline-00.png"
+                src="Images/airline-00.png"
+              />
+            </div>
+            <h6>Service design</h6>
+            <p>A beacon for better customer experience for an airline</p>
+          </a>
+        </div>
 
-      <div class="column">
-        <a href="aubergine.html">
-          <div class="box">
-            <img
-              class="progressive__img progressive--not-loaded"
-              data-progressive="Images/aubergine-00.png"
-              src="Images/ubergine-00.png"
-            />
-          </div>
-          <h6>Industrial design</h6>
-          <p>The aubergine pillow, finding comfort in a puff</p>
-        </a>
+        <div class="column">
+          <a href="aubergine.html">
+            <div class="box">
+              <img
+                class="progressive__img progressive--not-loaded"
+                data-progressive="Images/aubergine-00.png"
+                src="Images/ubergine-00.png"
+              />
+            </div>
+            <h6>Industrial design</h6>
+            <p>The aubergine pillow, finding comfort in a puff</p>
+          </a>
+        </div>
       </div>
-
-    </div>
     </div>
 
     <footer>
